--- a/styles/layout.css
+++ b/styles/layout.css
@@ -12,9 +12,10 @@
 }
 
 .header:hover .menu-link{
-    display: inline-block;
+    visibility: visible;
     opacity: 1;
 }
+
 
 .logo{
     display: block;
@@ -35,17 +36,21 @@ hr{
 }
 
 .icon-bg{
-    padding:16px 32px;
+    padding:1px 32px;
     border-radius: 300px 0 0 300px;
-    margin-left:11px;
-    position: relative;    
+    position: relative; 
+    margin-left: 8px; 
+    margin-right: 8px;  
+}
+.icon-bg:last-of-type{
+    padding:1px 24px;
 }
 .icon-bg > .menu-link{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: none;
+    visibility: hidden;
     text-decoration: none;
     font-size: 16px;
-    color: #02577A;
+    color: #C4C4C4;
     font-weight: 600;
     margin-left:15px;
     opacity: 0;
@@ -54,19 +59,30 @@ hr{
     left:40%;
     transform: translateX(-50%);
     transform: translateY(50%);
-
-
+    transition: 0.1s linear;
+    transition-delay: 0.1;
 } 
 
 .icon-bg:hover{
     background-color: white;
 }
 
+.icon-bg:hover .menu-link {
+    color:#02577A;
+}
+.icon-bg:hover .menu-icon {
+    filter: invert(20%) sepia(80%) saturate(1774%) hue-rotate(174deg) brightness(93%) contrast(98%);
+}
+
+
+
 .menu-icon{
     display: inline-block;
     height: 25px;
     width: auto;
     margin:15px auto;
-    filter: invert(22%) sepia(100%) saturate(782%) hue-rotate(163deg) brightness(96%) contrast(99%);
+    filter: invert(85%) sepia(0%) saturate(0%) hue-rotate(340deg) brightness(93%) contrast(93%);
 }
+
+
 
