--- a/styles/layout.css
+++ b/styles/layout.css
@@ -51,15 +51,13 @@ hr{
     font-size: 16px;
     color: #C4C4C4;
     font-weight: 600;
-    margin-left:15px;
+    padding: 10px 15px ;
     opacity: 0;
     position: absolute;
     bottom: 50%;
     left:40%;
-    transform: translateX(-50%);
     transform: translateY(50%);
     transition: 0.1s linear;
-    transition-delay: 0.1;
 } 
 
 .icon-bg:hover{
